# CyberboxSIEM

./: .dockerignore  .gitignore  192.168.26.128  COLLECTOR_PERFORMANCE_REPORT.md  Cargo.toml  PERFORMANCE_CAPACITY_REPORT.md  PERFORMANCE_REPORT.md  README.md  To do.txt  docker-compose.prod.yml  docker-compose.yml  justfile  loadtest-1h-report.json  loadtest-30m-report.json  loadtest-5m-50k-report.json
.claude/: settings.local.json
.github/workflows/: agent-release.yml  ci.yml  deploy.yml
apps/collector-bench/: Cargo.toml
apps/collector-bench/src/: main.rs
apps/cyberbox-agent/: Cargo.toml  agent.example.toml
apps/cyberbox-agent/src/: config.rs  disk_queue.rs  main.rs  output.rs  registration.rs  service_windows.rs  updater.rs
apps/cyberbox-agent/src/sources/: docker.rs  file.rs  fim.rs  journald.rs  mod.rs  netconn.rs  procmon.rs  sysmon.rs  wineventlog.rs
apps/cyberbox-api/: Cargo.toml  Dockerfile
apps/cyberbox-api/src/: agent_identity.rs  extractors.rs  lib.rs  main.rs  persist.rs  routes.rs  rules_pack.rs  scheduler.rs  state.rs  stream.rs  syslog_receiver.rs
apps/cyberbox-api/tests/: api_contracts.rs
apps/cyberbox-collector/: Cargo.toml  Dockerfile
apps/cyberbox-collector/src/: dlq.rs  forwarder.rs  healthz.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  multiline.rs  parser.rs  ratelimit.rs  remote_config.rs  source_registry.rs  vault.rs
apps/cyberbox-collector/src/sources/: cloud.rs  gelf.rs  json_input.rs  kafka.rs  mod.rs  netflow.rs  otlp.rs  tail.rs  tcp.rs  udp.rs  wineventlog.rs
apps/cyberbox-collector/tests/: integration.rs
apps/cyberbox-dashboard/: package-lock.json  package.json
apps/cyberbox-loadgen/: Cargo.toml
apps/cyberbox-loadgen/src/: collector_bench.rs  main.rs
apps/cyberbox-worker/: Cargo.toml  Dockerfile
apps/cyberbox-worker/src/: main.rs
config/: default.toml  load-matrix.json  nginx-proxy.conf
crates/cyberbox-auth/: Cargo.toml
crates/cyberbox-auth/src/: lib.rs
crates/cyberbox-core/: Cargo.toml
crates/cyberbox-core/src/: app_config.rs  enrichment.rs  eps_limiter.rs  errors.rs  geoip.rs  lib.rs  lookup_store.rs  nlq.rs  normalize.rs  parsers.rs  teams.rs  telemetry.rs  threatintel.rs
crates/cyberbox-detection/: Cargo.toml
crates/cyberbox-detection/benches/: detection_bench.rs
crates/cyberbox-detection/src/: lib.rs
crates/cyberbox-models/: Cargo.toml
crates/cyberbox-storage/: Cargo.toml
crates/cyberbox-storage/src/: clickhouse_store.rs  in_memory.rs  lib.rs  postgres_workflow_store.rs  traits.rs  workflow_backend.rs  workflow_store.rs  write_buffer.rs
docs/: architecture.md  runbook.md
docs/client-onboarding/: SAFEBOX.md
helm/cyberbox/: Chart.yaml  values.yaml
infra/docker/: docker-compose.yml  prometheus.yml
logs/: api-metrics.txt  api.pid  api18080.pid  audit_state.json  baseline-latency.json  eps-load-async.json  eps-load-notes-2026-03-05.txt  eps-load-soak-20260305T161628Z.json  eps-load-soak-20260305T161831Z.json  eps-load-soak-20260305T162245Z.json  eps-load-soak-20260305T162557Z.json  eps-load-soak-20260305T163120Z.json  eps-load-soak-20260305T164018Z.json  eps-load-soak-20260305T164434Z.json  eps-load-soak-20260305T164659Z.json  eps-load-soak-20260305T165003Z.json  eps-load-soak-20260306T020350Z.json  eps-load-soak-20260306T062714Z.json  eps-load-soak-20260306T063024Z.json  eps-load-soak-20260306T133855Z.json  eps-load-soak-20260306T135713Z.json  eps-load-soak-20260306T153600Z.json  eps-load-soak-20260306T154405Z.json  eps-load.json  load-soak-baseline-20260305T161628Z.json  load-soak-baseline-20260305T161831Z.json  load-soak-baseline-20260305T162245Z.json  load-soak-baseline-20260305T162557Z.json  load-soak-baseline-20260305T163120Z.json  load-soak-baseline-20260305T164018Z.json  load-soak-baseline-20260305T164434Z.json  load-soak-baseline-20260305T164659Z.json  load-soak-baseline-20260305T165003Z.json  load-soak-baseline-20260306T020350Z.json  load-soak-baseline-20260306T062714Z.json  load-soak-baseline-20260306T063024Z.json  load-soak-baseline-20260306T133855Z.json  load-soak-baseline-20260306T135713Z.json  load-soak-baseline-20260306T153600Z.json  load-soak-baseline-20260306T154405Z.json  (+10 more)
logs/perf-sweep/: max_c16_b100.json  max_c16_b500.json  max_c1_b100.json  max_c4_b100.json  max_c8_b100.json  max_c8_b1000.json  max_c8_b50.json  max_c8_b500.json  rate_10k_c8_b100.json  rate_1k_c4_b100.json  rate_20k_c16_b100.json  rate_50k_c16_b500.json  rate_5k_c8_b100.json
packaging/docker/: Dockerfile  docker-compose.agent.yml
packaging/linux/: build-deb.sh
packaging/windows/: _reinstall-agent.ps1  _update-config.ps1  build-msi.ps1  cyberbox-agent-0.1.0.wixpdb  cyberbox-agent-0.1.1.wixpdb  cyberbox-agent-v3.wxs  cyberbox-agent.wxs  cyberbox-signing.cer
rules/bundled/: README.md  brute_force_ssh.yml  docker_exec_in_container.yml  docker_privileged_container.yml  entra_admin_role_assigned.yml  entra_app_consent_granted.yml  entra_conditional_access_disabled.yml  entra_failed_signin.yml  entra_guest_user_invited.yml  entra_mfa_denied.yml  entra_password_reset_by_admin.yml  fim_sensitive_file_modified.yml  fin_account_dormant_reactivation.yml  fin_after_hours_logon.yml  fin_bulk_data_export.yml  fin_database_admin_logon.yml  fin_lateral_movement_smb.yml  fin_multiple_failed_auth.yml  fin_privilege_escalation.yml  fin_ransomware_indicators.yml  fin_sensitive_file_access.yml  fin_unauthorized_vpn_access.yml  ioc_abuseipdb_firewall_pass.yml  ioc_abuseipdb_inbound.yml  ioc_abuseipdb_outbound.yml  lgpd_consent_record_modification.yml  lgpd_data_deletion_request.yml  (+40 more)
scripts/: aws-bootstrap.sh  check-worker-groups.ps1  collector-perf.sh  create-topics.ps1  deploy.sh  generate-signing-cert.ps1  load-baseline.ps1  load-eps.ps1  load-matrix.ps1  load-max-eps.ps1  load-overload-429.ps1  load-soak.ps1  loadtest-realistic.sh  operator-flow-smoke.ps1  perf-sweep.sh  reset-load-topics.ps1  setup-agent.ps1  simulate-attacks.sh  start-api-dev-container.ps1  start-worker-dev-replicas.ps1  start-worker-role-stack.ps1  sync-sigma-rules.sh  wait-worker-groups.ps1
tools/: eps-calculator.html
(+171 files in other folders)
