[package]
name        = "collector-bench"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[[bin]]
name = "collector-bench"
path = "src/main.rs"

[dependencies]
axum        = { workspace = true }
clap        = { version = "4", features = ["derive"] }
reqwest     = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing-subscriber = { workspace = true }
