[package]
name             = "cyberbox-agent"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true
description      = "Lightweight log-forwarding agent for CyberboxSIEM"

[[bin]]
name = "cyberbox-agent"
path = "src/main.rs"

[features]
default = []
# TLS output (rustls, no OpenSSL dependency)
tls = ["tokio-rustls", "rustls", "rustls-pemfile", "rustls-native-certs"]

[dependencies]
anyhow      = { workspace = true }
chrono      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = "0.10"
sled        = "0.34"
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# TLS (optional)
tokio-rustls       = { version = "0.26", optional = true }
rustls             = { version = "0.23", default-features = false, features = ["std", "tls12", "logging"], optional = true }
rustls-pemfile     = { version = "2",    optional = true }
rustls-native-certs = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
] }
windows-service = "0.7"
