[package]
name = "cyberbox-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default: use ring crypto backend (fast, no system deps)
default = ["crypto-ring"]
crypto-ring  = ["rustls/ring"]
# FIPS mode: use AWS-LC FIPS-validated crypto backend.
# Build with: cargo build --no-default-features --features fips
# Requires the aws-lc-rs crate built with its `fips` feature (needs cmake + AWS-LC source).
fips         = ["rustls/aws_lc_rs", "aws-lc-rs/fips"]
# Kafka consumer source (requires cmake + librdkafka native build).
# Build with: cargo build --features kafka
kafka        = ["rdkafka"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sha2.workspace = true
regex.workspace = true

cyberbox-models.workspace = true

# TLS for syslog TCP (RFC 5425)
tokio-rustls   = "0.26"
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }

# FIPS crypto backend (only when fips feature is active)
aws-lc-rs = { version = "1", optional = true }

# Gzip compression on API POST
flate2 = "1"

# SigV4 signing for S3 + HMAC request signing
hmac = "0.12"
hex  = "0.4"

# Kafka consumer (optional — enable with --features kafka)
rdkafka = { workspace = true, optional = true }

# Wait-free TLS acceptor swap for SIGUSR1 hot-reload
arc-swap.workspace = true

# True kernel-level SO_REUSEPORT load balancing for UDP (Linux only)
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
] }
