[package]
name = "cyberbox-loadgen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cyberbox-loadgen"
path = "src/main.rs"

[[bin]]
name = "collector-bench"
path = "src/collector_bench.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
