[package]
name = "cyberbox-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
dashmap.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

chrono.workspace = true
hex.workspace = true
sha2.workspace = true

subtle.workspace = true

cyberbox-core.workspace = true
