[package]
name = "cyberbox-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clickhouse.workspace = true
dashmap.workspace = true
metrics.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

cyberbox-core.workspace = true
cyberbox-models.workspace = true
